- Changes to web.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: James Bergin
 description: >
-  Welcome. I am a embedded software engineer working for a start-up company
-  that is changing the future of music creation.
+  Welcome. I am a embedded software engineer working for a leading designer / manufacturer of flash photography strobes and accessories.
 url: 'http://bergin.pro/'
 baseurl: '/'
 google_analytics: 'UA-85981147-3'
