Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -44,3 +44,5 @@ kramdown:
 
 gems: ['jekyll-paginate']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
+
+theme: jekyll-theme-cayman
