--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: James Bergin
 description: >
   Welcome. I am a embedded software engineer working for a leading designer / manufacturer of flash photography strobes and accessories.
-url: 'http://bergin.pro/'
-baseurl: '/'
+url: 'http://bergin.pro'
+baseurl: ''
 google_analytics: 'UA-85981147-3'
 # disqus_shortname: 'your-disqus-name'
 
